welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: not found: type int
var i:int=0; 
      ^Methods:5: error: reassignment to val
     	 	     	i=i+1
                         ^