welcome.lessons.welcome.methods.basics.Methods.scala.code
var i:int=0; 
     	 def goAndGet() {
     	 	     for(i<-1 to 6){
     	 	     	i=i+1
        	prendBiscuit();
        	recule();
        	poseBiscuit();
        }
     }
       
    